# OpenReconFI

./: .gitignore  LICENSE  README.md  docker-compose.yml  openapi.json  pyproject.toml
Backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  export_schema.py  main.py
Backend/alembic/: env.py
Backend/app/: config.py  main.py
Backend/artifacts/: CHECKLIST.md
Backend/scripts/: entrypoint.sh  get_google_refresh_token.py  init-pgvector.sql
Backend/tests/: conftest.py  test_chat.py  test_dashboard.py  test_embeddings.py  test_ingester.py  test_invoices.py  test_llm.py  test_matcher.py  test_reconciliation.py  test_reports.py  test_vendors.py
Frontend/: Dockerfile  README.md  index.html  nginx.conf  orval.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
Frontend/e2e/: global-setup.ts
Frontend/public/: site.webmanifest
Frontend/src/: App.tsx  main.tsx
alembic/versions/: a3f5c8e21b4d_add_pgvector_embeddings_chat_messages.py  e7dc78702c5b_initial_phase1_tables.py
app/: db.py
app/models/: __init__.py  chat_message.py  enums.py  job_run.py  match.py  transaction.py  vendor.py
app/routers/: invoices.py  reconciliation.py
app/schemas/: chat.py  invoice.py  job.py  match.py  reconciliation.py  report.py  transaction.py
app/scrapers/: base.py
app/services/: collector.py  drive.py  embeddings.py  gmail.py  ingester.py  (+1 more)
artifacts/: ARCHITECTURE.md  CHECKLIST.md
scripts/: backfill_embeddings.py  get_google_refresh_token.py
tests/: conftest.py  test_gmail.py  test_reconciliation.py
(+235 files in other folders)
